--- a/index.html
+++ b/index.html
@@ -50,5 +50,6 @@
     <footer>
         <p>adadadada</p>
     </footer>
+    <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum temporibus distinctio vero nesciunt, non quasi modi. Magnam id illum, aliquid repellendus accusantium itaque ipsam asperiores libero. Eos eveniet saepe ea! -->
 </body>
 </html>
