--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         </h6>
         <ul class= "link">
             <li>
-                header link one
+               <a>header link one</a>
             </li>
             <li>
-                header link two
+                <a>header link two</a>
             </li>
             <li>
-                header link three
+                <a>header link three</a>
             </li>
         </ul>
     </nav>
