adding flexbox to navbar and put button, img element on hero

--- a/index.html
+++ b/index.html
@@ -30,9 +30,13 @@
         <h1 class="hero-main">
             This website is awesome
         </h1>
-        <h2 class="hero-secondary">
+        <p class="hero-secondary">
             This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
-        </h2>
+        </p>
+        <button>
+            Sign Up
+        </button>
+        <img src=# alt="this is placeholder">
     </div>
     <!--ini informasi-->
     <div>
