tambahin element img sm subtext di informasi

--- a/index.html
+++ b/index.html
@@ -40,11 +40,28 @@
     </div>
     <!--ini informasi-->
     <div>
-        <p>adadadada</p>
+        <h2>Some random information.</h2>
+        <div>
+            <img src="#" alt="ini foto 1">
+            <p>subtext 1</p>
+        </div>
+        <div>
+            <img src=# alt="ini foto 2">
+            <p>subtext 2</p>
+        </div>
+        <div>
+            <img src="#" alt="ini foto 3">
+            <p>subtext 3</p>
+        </div>
+        <div>
+            <img src="#" alt="ini foto 4">
+            <p>subtext 4</p>
+        </div>
     </div>
     <!--ini quote-->
     <div class= "div3">
-        <p>adadadada</p>       
+        <p>adadadada</p>
+        <p>nama author</p>       
     </div>
     <!--ini action-->
     <div>
