nambahin flex di hero

--- a/index.html
+++ b/index.html
@@ -27,15 +27,17 @@
     </nav>
     <!--ini hero-->
     <div class="div1">
-        <h1 class="hero-main">
+        <div class="container1">
+          <h1 class="hero-main">
             This website is awesome
-        </h1>
-        <p class="hero-secondary">
+          </h1>
+          <p class="hero-secondary">
             This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
-        </p>
-        <button>
+          </p>
+          <button>
             Sign Up
-        </button>
+          </button>
+        </div>
         <img src=# alt="this is placeholder">
     </div>
     <!--ini informasi-->
