edit flexbox sama tambah image di hero

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
           <p class="hero-secondary">
             This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
           </p>
-          <button>
+          <button class="button1">
             Sign Up
           </button>
         </div>
-        <img src=# alt="this is placeholder">
+        <img src="placeholder1.jpg" alt="this is placeholder" class= "img1">
     </div>
     <!--ini informasi-->
     <div>
