nambahin img dan flex di bagian informasi

--- a/index.html
+++ b/index.html
@@ -41,24 +41,34 @@
         <img src="placeholder1.jpg" alt="this is placeholder" class= "img1">
     </div>
     <!--ini informasi-->
-    <div>
-        <h2>Some random information.</h2>
-        <div>
-            <img src="#" alt="ini foto 1">
-            <p>subtext 1</p>
+    <div class= information>
+        <h2 class="container2">Some random information.</h2>
+     <div class="container3">
+        <div class= icon>
+            <img src="ball.png" alt="ini foto 1">
+            <div class="text">
+                ini bola buat nendang
+            </div>
         </div>
-        <div>
-            <img src=# alt="ini foto 2">
-            <p>subtext 2</p>
+        <div class= icon>
+            <img src="field.png" alt="ini foto 2">
+            <div class="text">
+                ini lapangannya
+            </div>
         </div>
-        <div>
-            <img src="#" alt="ini foto 3">
-            <p>subtext 3</p>
+        <div class= icon>
+            <img src="goal.png" alt="ini foto 3">
+            <div class="text">
+                ini tempat buat nyetak goal
+            </div>
         </div>
-        <div>
-            <img src="#" alt="ini foto 4">
-            <p>subtext 4</p>
+        <div class= icon>
+            <img src="football-shoes.png" alt="ini foto 4">
+            <div class= text>
+                ini sepatu yang dipakai
+            </div>
         </div>
+     </div>
     </div>
     <!--ini quote-->
     <div class= "div3">
