tambahin html buat quote, action, footer

--- a/index.html
+++ b/index.html
@@ -72,17 +72,28 @@
     </div>
     <!--ini quote-->
     <div class= "div3">
-        <p>adadadada</p>
-        <p>nama author</p>       
+        <p>Play for the name on the front of the shirt, and they will remember the name on the back</p>
+        <p>-Tony Adams, Arsenal (1983-2002) </p>       
     </div>
     <!--ini action-->
     <div>
-        <p>adadadada</p>
+        <div class="action box">
+          <div>
+              Call to action! it's time!
+          </div>>
+          <div> 
+              Sign up for our newsletter by clicking that button right over there!
+          </div>
+        </div>
+        <button class="button2">
+            Sign up
+        </button>
     </div>
     <!--ini footer-->
     <footer>
-        <p>adadadada</p>
-    </footer>
-    <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum temporibus distinctio vero nesciunt, non quasi modi. Magnam id illum, aliquid repellendus accusantium itaque ipsam asperiores libero. Eos eveniet saepe ea! -->
+        <p>
+            Copyright The Odin Project 2021
+        </p>
+    </footer>   
 </body>
 </html>
