--- a/index.html
+++ b/index.html
@@ -72,8 +72,14 @@
     </div>
     <!--ini quote-->
     <div class= "div3">
-        <p>Play for the name on the front of the shirt, and they will remember the name on the back</p>
-        <p>-Tony Adams, Arsenal (1983-2002) </p>       
+        <div class= "container4">
+        <div class= "quote">
+            Play for the name on the front of the shirt, and they will remember the name on the back
+        </div>
+        <div class="author">
+            -Tony Adams, Arsenal (1983-2002)
+        </div>
+        </div>      
     </div>
     <!--ini action-->
     <div>
