styling call to action button

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 </head>
 <body>
     <!--ini navbar-->
@@ -82,18 +83,20 @@
         </div>      
     </div>
     <!--ini action-->
-    <div>
-        <div class="action box">
-          <div>
-              Call to action! it's time!
-          </div>>
-          <div> 
-              Sign up for our newsletter by clicking that button right over there!
-          </div>
-        </div>
-        <button class="button2">
+    <div class="action">
+        <div class="action-box">
+            <div class="action-flex">
+              <div class="call">
+                  Call to action! it's time!
+              </div>
+              <div class= call-desc> 
+                  Sign up for our newsletter by clicking that button right over there!
+              </div>
+         </div>
+         <button class="button2">
             Sign up
-        </button>
+         </button>
+      </div>
     </div>
     <!--ini footer-->
     <footer>
