--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
       </div>
     </div>
     <!--ini footer-->
-    <footer>
+    <footer class= "background-navy">
         <p>
-            Copyright The Odin Project 2021
+            Copyright © The Odin Project 2021
         </p>
     </footer>   
 </body>
