--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         </h6>
         <ul class= "link">
             <li>
-               <a>header link one</a>
+               <a href=#>header link one</a>
             </li>
             <li>
-                <a>header link two</a>
+                <a href=#>header link two</a>
             </li>
             <li>
-                <a>header link three</a>
+                <a href=#>header link three</a>
             </li>
         </ul>
     </nav>
